# FileIndexer

./: .gitignore  CMakeLists.txt  Feedback  README.md  UmlClassDiagram.puml  db.xml  main.cpp  main.qml  qml.qrc  test.xml
DirectoryManagment/Indexer/: Indexer.cpp  Indexer.h
DirectoryManagment/PathQueue/: PathQueue.cpp  PathQueue.h
FillModel/: CustomStandardItemModel.cpp  CustomStandardItemModel.h  FillModel.cpp  FillModel.h
Indexer/: Indexer.cpp  Indexer.h
MyApp/: MyApp.cpp  MyApp.h
UI/: ButtonRow.qml  ExtentionChooser.qml  FilesTableView.qml  IndexInput.qml  SearchBar.qml  main.qml
XML/XMLParser/: XMLParser.cpp
XML/XMLWriter/: XMLWriter.cpp  XMLWriter.h
XMLParser/: XMLParser.cpp  XMLParser.h
XMLWriter/: XMLWriter.cpp  XMLWriter.h
